<resources>
    <string name="app_name" translatable="false">i-Cook</string>
    <string name="signup">Don\'t have account ? Sign up!</string>
    <string name="signin">Have account ? Sign in!</string>
    <string name="email_hint">Email</string>
    <string name="name_hint">Name</string>
    <string name="password_hint">Password</string>
    <string name="btn_signin">Sign in</string>
    <string name="btn_signup">Sign up</string>
    <string name="email_msg">Enter email address!</string>
    <string name="name_msg">Enter your name!</string>
    <string name="password_msg">Enter password!</string>
    <string name="password_limit">Password too short, enter minimum 6 characters!</string>
    <string name="info_changed_msg_suc">Your name has changed successfully</string>
    <string name="upload_msg_suc">Your photo has uploaded successfully</string>
    <string name="upload_msg_fail">Sorry , failed</string>
    <string name="fb_auth_failed">Authentication failed.</string>
    <string name="source">Recipe Source:</string>
    <string name="src_url">Source URL</string>
    <string name="ingredients">Ingredients</string>
    <string name="change_password">Change password</string>
    <string name="btn_save">Save</string>
    <string name="old_password_hint">Old password</string>
    <string name="new_password_hint">New password</string>
    <string name="btn_reset_password">Reset password</string>
    <string name="change_password_suc">Your password is changed successfully</string>
    <string name="invalid_password">Invalid password</string>
    <string name="wrong_password">Wrong password</string>
    <string name="enter_password">Enter password</string>
    <string name="loading_info">Loading information</string>
    <string name="loading_password">Changing password </string>
    <string name="up">Up button</string>
    <string name="msg_hint">Enter message</string>
    <string name="send_btn">Send</string>
    <string name="send_msg">Send us a message</string>
    <string name="contact_us">Contact us</string>
    <string name="about_us">About us</string>


    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_others">Other</string>
    <string name="drawer_aboutus">About us</string>
    <string name="drawer_contactus">Contact us</string>
    <string name="drawer_logout">Logout</string>
    <string name="drawer_find">Find something to cook</string>
    <string name="drawer_fav">My favourites</string>
    <string name="msg_suc">Your message has sent successfully</string>


    <string name="no_fav_toast">You have no favourites yet!</string>
    <string name="api_limits">Sorry, the limit utilization of hits for this api only 5 per minute</string>
    <string name="find_btn">find</string>
    <string name="search_hint" translatable="false">eg: egg,milk,sugar</string>
    <string name="query_error">Enter query</string>
    <string name="no_result">Sorry, no result for this query</string>
    <string name="no_network">Check your internet connection</string>
    <string name="make_fav">Make favourite</string>
    <string name="user_pic">Profile picture</string>
    <string name="edit_pic">Edit picture</string>
    <string name="recipe_pic">Recipe picture</string>
    <string name="user_prof">User profile</string>


    <!--firebase strings-->
    <string name="fb_users" translatable="false">Users</string>
    <string name="fb_pp_folder" translatable="false">ProfilePics</string>
    <string name="fb_fav" translatable="false">Favourites</string>
    <string name="fb_users_name" translatable="false">name</string>
    <string name="fb_users_pp" translatable="false">photo</string>
    <string name="fb_msg" translatable="false">msgs</string>
    <string name="fb_aboutus" translatable="false">AboutUs</string>


    <!--intent extras-->
    <string name="recipe_details_extra" translatable="false">recipeDetails</string>
    <string name="query_extra" translatable="false">query</string>
    <string name="btn_widget_open">Open Favourites</string>


</resources>


