<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:layout_width="match_parent"
        android:minHeight="@dimen/abc_action_bar_default_height_material"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:elevation="4dp"
        />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:id="@+id/activity_new_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
       >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="79dp"
            android:id="@+id/tv_msg"
            android:text="@string/send_msg"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:textColor="?colorAccent"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/et_msg"
            android:hint="@string/msg_hint"
            android:layout_marginTop="22dp"
            />

        <Button
            android:text="@string/send_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_send"
            android:onClick="sendMsg"
            android:layout_marginTop="45dp" />

    </LinearLayout>
</FrameLayout>
