<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <android.support.v7.widget.Toolbar

        android:id="@+id/toolbar"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:layout_width="match_parent"
        android:minHeight="@dimen/abc_action_bar_default_height_material"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:elevation="4dp"
        />
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_new_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_marginTop="79dp"
            android:id="@+id/et_old_password"
            android:hint="@string/old_password_hint"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/et_new_password"
            android:hint="@string/new_password_hint"
            android:layout_marginTop="22dp"
            android:layout_below="@+id/et_old_password"
            android:layout_alignParentStart="true" />

        <Button
            android:text="@string/btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:onClick="resetPassword"
            android:layout_below="@+id/et_new_password"
            android:layout_alignParentStart="true"
            android:layout_marginTop="45dp" />

    </RelativeLayout>
</FrameLayout>