<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_pp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/photo_background_protection" />
            <ImageButton
                android:id="@+id/action_up"
                android:layout_width="64dp"
                android:layout_height="54dp"
                android:layout_marginTop="30dp"
                android:scaleType="fitStart"
                android:src="@drawable/ic_up"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/up"
                android:padding="@dimen/padding"
                />

        </FrameLayout>
        <android.support.v7.widget.Toolbar
            android:id="@+id/main.toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_collapseMode="pin"
            />
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:layout_anchor="@id/main.appbar"
        android:src="@drawable/ic_pencil_48"
        app:layout_anchorGravity="bottom|right|end"
        app:backgroundTint="?colorAccent"
        android:onClick="editPic"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="swes.swes.activity.UserAccountActivity"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="?android:colorBackground">

        <Button
            android:text="@string/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_save"
            android:onClick="saveChanges"
            android:layout_marginBottom="55dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:srcCompat="@drawable/ic_user_50"
            android:id="@+id/imageView2"
            android:layout_alignTop="@+id/editText_name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/name_hint"
            android:ems="10"
            android:id="@+id/editText_name"
            android:layout_marginBottom="47dp"
            android:layout_above="@+id/btn_save"
            android:layout_alignLeft="@+id/editText_email"
            android:layout_alignStart="@+id/editText_email" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/ic_email_48"
            android:id="@+id/imageView"
            android:layout_alignBottom="@+id/editText_email"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            tools:text="email"
            android:ems="10"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/editText_email"
            android:layout_marginBottom="28dp"
            android:layout_above="@+id/editText_name"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:text="@string/change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/editText_name"
            android:layout_toEndOf="@+id/editText_name"
            android:layout_marginBottom="16dp"
            android:onClick="toChangePassword"
            android:id="@+id/tv_changePassword" />

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>





